// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationResolver createNavigation 1`] = `
{
  "data": {
    "createNavigation": {
      "id": "2",
      "key": "new",
      "name": "New Navigation",
    },
  },
}
`;

exports[`NavigationResolver deleteNavigation 1`] = `
{
  "data": {
    "deleteNavigation": {
      "id": "1",
    },
  },
}
`;

exports[`NavigationResolver navigation 1`] = `
{
  "data": {
    "navigation": {
      "id": "1",
      "key": "main",
      "links": [],
      "name": "Main Navigation",
    },
  },
}
`;

exports[`NavigationResolver navigations 1`] = `
{
  "data": {
    "navigations": [
      {
        "id": "1",
        "key": "main",
        "links": [
          {
            "id": "1",
            "label": "Foobar",
            "type": "External",
          },
        ],
        "name": "Main Navigation",
      },
    ],
  },
}
`;

exports[`NavigationResolver updateNavigation 1`] = `
{
  "data": {
    "updateNavigation": {
      "id": "1",
      "key": "updated",
      "name": "Updated Navigation",
    },
  },
}
`;
